Fix bottom whitespace, bigger powered by, recording stats

--- a/grid/css/main.css
+++ b/grid/css/main.css
@@ -154,9 +154,9 @@ a:hover {
 #footer {
   clear: left;
   text-align:center;
-  margin-top:25px;
+  margin-top:8px;
   margin-bottom: 15px;
-  font-size: 10px;
+  font-size: 11px;
 }
 
 #poweredBy {
